src/parser/dot.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Graph: peg$parseGraph };
  var peg$startRuleFunction = peg$parseGraph;

  var peg$c0 = "{";
  var peg$c1 = "}";
  var peg$c2 = ";";
  var peg$c3 = "[";
  var peg$c4 = "]";
  var peg$c5 = "=";
  var peg$c6 = ":";
  var peg$c7 = "->";
  var peg$c8 = "--";
  var peg$c9 = "+";
  var peg$c10 = "\"";
  var peg$c11 = "\\\"";
  var peg$c12 = "\\\\";
  var peg$c13 = "\\n";
  var peg$c14 = "\\t";
  var peg$c15 = "\\l";
  var peg$c16 = "\\r";
  var peg$c17 = "\\\n";
  var peg$c18 = "\\";
  var peg$c19 = "<";
  var peg$c20 = ">";
  var peg$c21 = "-";
  var peg$c22 = ".";
  var peg$c23 = "/*";
  var peg$c24 = "*/";
  var peg$c25 = "//";
  var peg$c26 = "\n";
  var peg$c27 = "#";

  var peg$r0 = /^[;,]/;
  var peg$r1 = /^[^"\\]/;
  var peg$r2 = /^[^<>]/;
  var peg$r3 = /^[A-Za-z_\x80-\xFF]/;
  var peg$r4 = /^[A-Za-z_0-9\x80-\xFF]/;
  var peg$r5 = /^[0-9]/;
  var peg$r6 = /^[eE]/;
  var peg$r7 = /^[+\-]/;
  var peg$r8 = /^[Ss]/;
  var peg$r9 = /^[Tt]/;
  var peg$r10 = /^[Rr]/;
  var peg$r11 = /^[Ii]/;
  var peg$r12 = /^[Cc]/;
  var peg$r13 = /^[Gg]/;
  var peg$r14 = /^[Aa]/;
  var peg$r15 = /^[Pp]/;
  var peg$r16 = /^[Hh]/;
  var peg$r17 = /^[Dd]/;
  var peg$r18 = /^[Nn]/;
  var peg$r19 = /^[Oo]/;
  var peg$r20 = /^[Ee]/;
  var peg$r21 = /^[Uu]/;
  var peg$r22 = /^[Bb]/;
  var peg$r23 = /^[ \t\r\n]/;
  var peg$r24 = /^[^\n]/;

  var peg$e0 = peg$literalExpectation("{", false);
  var peg$e1 = peg$literalExpectation("}", false);
  var peg$e2 = peg$literalExpectation(";", false);
  var peg$e3 = peg$literalExpectation("[", false);
  var peg$e4 = peg$literalExpectation("]", false);
  var peg$e5 = peg$classExpectation([";", ","], false, false);
  var peg$e6 = peg$literalExpectation("=", false);
  var peg$e7 = peg$literalExpectation(":", false);
  var peg$e8 = peg$otherExpectation("edge operator");
  var peg$e9 = peg$literalExpectation("->", false);
  var peg$e10 = peg$literalExpectation("--", false);
  var peg$e11 = peg$literalExpectation("+", false);
  var peg$e12 = peg$literalExpectation("\"", false);
  var peg$e13 = peg$literalExpectation("\\\"", false);
  var peg$e14 = peg$literalExpectation("\\\\", false);
  var peg$e15 = peg$literalExpectation("\\n", false);
  var peg$e16 = peg$literalExpectation("\\t", false);
  var peg$e17 = peg$literalExpectation("\\l", false);
  var peg$e18 = peg$literalExpectation("\\r", false);
  var peg$e19 = peg$literalExpectation("\\\n", false);
  var peg$e20 = peg$literalExpectation("\\", false);
  var peg$e21 = peg$anyExpectation();
  var peg$e22 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$e23 = peg$literalExpectation("<", false);
  var peg$e24 = peg$literalExpectation(">", false);
  var peg$e25 = peg$classExpectation(["<", ">"], true, false);
  var peg$e26 = peg$classExpectation([["A", "Z"], ["a", "z"], "_", ["\x80", "\xFF"]], false, false);
  var peg$e27 = peg$classExpectation([["A", "Z"], ["a", "z"], "_", ["0", "9"], ["\x80", "\xFF"]], false, false);
  var peg$e28 = peg$literalExpectation("-", false);
  var peg$e29 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e30 = peg$literalExpectation(".", false);
  var peg$e31 = peg$classExpectation(["e", "E"], false, false);
  var peg$e32 = peg$classExpectation(["+", "-"], false, false);
  var peg$e33 = peg$classExpectation(["S", "s"], false, false);
  var peg$e34 = peg$classExpectation(["T", "t"], false, false);
  var peg$e35 = peg$classExpectation(["R", "r"], false, false);
  var peg$e36 = peg$classExpectation(["I", "i"], false, false);
  var peg$e37 = peg$classExpectation(["C", "c"], false, false);
  var peg$e38 = peg$classExpectation(["G", "g"], false, false);
  var peg$e39 = peg$classExpectation(["A", "a"], false, false);
  var peg$e40 = peg$classExpectation(["P", "p"], false, false);
  var peg$e41 = peg$classExpectation(["H", "h"], false, false);
  var peg$e42 = peg$classExpectation(["D", "d"], false, false);
  var peg$e43 = peg$classExpectation(["N", "n"], false, false);
  var peg$e44 = peg$classExpectation(["O", "o"], false, false);
  var peg$e45 = peg$classExpectation(["E", "e"], false, false);
  var peg$e46 = peg$classExpectation(["U", "u"], false, false);
  var peg$e47 = peg$classExpectation(["B", "b"], false, false);
  var peg$e48 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);
  var peg$e49 = peg$literalExpectation("/*", false);
  var peg$e50 = peg$literalExpectation("*/", false);
  var peg$e51 = peg$literalExpectation("//", false);
  var peg$e52 = peg$classExpectation(["\n"], true, false);
  var peg$e53 = peg$literalExpectation("\n", false);
  var peg$e54 = peg$literalExpectation("#", false);

  var peg$f0 = function(s, t, id, stmts) {
      return {
        type: "graph",
        strict: s,
        directed: t,
        id: id,
        stmts: stmts
      };
    };
  var peg$f1 = function() { return { type: "graph", strict: false, directed: false, id: null, stmts: [] }; };
  var peg$f2 = function() { return true; };
  var peg$f3 = function() { return false; };
  var peg$f4 = function() { return true; };
  var peg$f5 = function() { return false; };
  var peg$f6 = function(a) { return a; };
  var peg$f7 = function() { return null; };
  var peg$f8 = function(s) { return s; };
  var peg$f9 = function(stmts) { return stmts; };
  var peg$f10 = function(s) { return s; };
  var peg$f11 = function(s) { return s; };
  var peg$f12 = function(t, attrs) { return { type: "attr", target: t, attrs: attrs }; };
  var peg$f13 = function(a) { return { type: "assign", key: a.key, value: a.value }; };
  var peg$f14 = function() { return "graph"; };
  var peg$f15 = function() { return "node"; };
  var peg$f16 = function() { return "edge"; };
  var peg$f17 = function(defs, rest) { return defs.concat(rest); };
  var peg$f18 = function(defs) { return defs; };
  var peg$f19 = function() { return []; };
  var peg$f20 = function(a) { return a; };
  var peg$f21 = function(pairs) { return pairs; };
  var peg$f22 = function(k, v) { return { key: k, value: v }; };
  var peg$f23 = function(head, chain, attrs) {
      if (chain.length > 0) {
        const nodes = [head].concat(chain);
        return { type: "edge", nodes: nodes, attrs: attrs };
      } else {
        // single node or subgraph — treat subgraph as subgraph stmt
        if (head.type === "subgraph") {
          // bare subgraph with no edges
          return head;
        }
        // NodeId array — return NodeStmt(s) for first element only
        return { type: "node", id: head, attrs: attrs };
      }
    };
  var peg$f24 = function(s) { return s; };
  var peg$f25 = function(n) { return n; };
  var peg$f26 = function(id, port, compass) { return { id: id, port: port, compass: compass }; };
  var peg$f27 = function(id, port) { return { id: id, port: port, compass: null }; };
  var peg$f28 = function(id) { return { id: id, port: null, compass: null }; };
  var peg$f29 = function(s, rest) { return [s].concat(rest); };
  var peg$f30 = function() { return []; };
  var peg$f31 = function(id, stmts) { return { type: "subgraph", id: id, stmts: stmts }; };
  var peg$f32 = function(stmts) { return { type: "subgraph", id: null, stmts: stmts }; };
  var peg$f33 = function(stmts) { return { type: "subgraph", id: null, stmts: stmts }; };
  var peg$f34 = function(first, s) { return s; };
  var peg$f35 = function(first, rest) { return rest.length > 0 ? first + rest.join("") : first; };
  var peg$f36 = function(s, s2) { return s2; };
  var peg$f37 = function(s, rest) { return rest.length > 0 ? s + rest.join("") : s; };
  var peg$f38 = function(chars) { return chars.join(""); };
  var peg$f39 = function() { return '"'; };
  var peg$f40 = function() { return '\\'; };
  var peg$f41 = function() { return '\n'; };
  var peg$f42 = function() { return '\t'; };
  var peg$f43 = function() { return '\\l'; };
  var peg$f44 = function() { return '\\r'; };
  var peg$f45 = function() { return ''; };
  var peg$f46 = function(c) { return c; };
  var peg$f47 = function(content) { return "\u0001" + content; };
  var peg$f48 = function(chars) { return chars.join(""); };
  var peg$f49 = function(nested, content) { return "<" + content + ">"; };
  var peg$f50 = function(n) { return n; };
  var peg$f51 = function(first, rest) { return first + rest.join(""); };
  var peg$f52 = function(s) { return Array.isArray(s) ? s.flat(Infinity).filter(x => x !== null && x !== undefined).join("") : String(s); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseGraph() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseOptStrict();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseGraphType();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseOptGraphName();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 123) {
            s8 = peg$c0;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s10 = peg$parseStmtList();
            s11 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 125) {
              s12 = peg$c1;
              peg$currPos++;
            } else {
              s12 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e1); }
            }
            if (s12 !== peg$FAILED) {
              s13 = peg$parse_();
              peg$savedPos = s0;
              s0 = peg$f0(s2, s4, s6, s10);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = '';
      peg$savedPos = s0;
      s0 = peg$f1();
    }

    return s0;
  }

  function peg$parseOptStrict() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseStrictKw();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f2();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = '';
      peg$savedPos = s0;
      s1 = peg$f3();
      s0 = s1;
    }

    return s0;
  }

  function peg$parseGraphType() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseDigraphKw();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f4();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseGraphKw();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f5();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseOptGraphName() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseAtom();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f6(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = '';
      peg$savedPos = s0;
      s1 = peg$f7();
      s0 = s1;
    }

    return s0;
  }

  function peg$parseStmtList() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseStmt();
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      peg$savedPos = s2;
      s2 = peg$f8(s3);
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parseStmt();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        peg$savedPos = s2;
        s2 = peg$f8(s3);
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f9(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseStmt() {
    var s0, s1, s2, s3, s4, s5;
